--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 
 	</dependencies>
+	<configuration>
+  <source>17</source>
+  <target>17</target>
+</configuration>
+
 
 	<build>
 
